# hse-caos-2020

./: .gitignore  CMakeLists.txt  test.py
sem1/: CMakeLists.txt  example1.c
sem10/: example1.S  main1.c
sem11/: example2.S  example2.s  main1.c
sem12/: CMakeLists.txt  example1.c  example2.c
sem13/: Dockerfile  main.c
sem14/: CMakeLists.txt  example1.c
sem15/: CMakeLists.txt  example1.c  lib1.c
sem16/: CMakeLists.txt  example1.c
sem17/: CMakeLists.txt  example1.c
sem18/: CMakeLists.txt  example1.c
sem19/: CMakeLists.txt  example1.c
sem2/: CMakeLists.txt  example1.c  example2.c  my_func.h
sem20/: CMakeLists.txt  example1.c
sem21/: CMakeLists.txt  example1.c  example2.c
sem22/: CMakeLists.txt  example1.c
sem23/: CMakeLists.txt  example1.c
sem24/: CMakeLists.txt  example1.c
sem25/: CMakeLists.txt  example.cpp  temlpates.cpp
sem3/: CMakeLists.txt  example1.c  example2.c
sem4/: CMakeLists.txt  example1.c  example2.c
sem5/: CMakeLists.txt  example1.c  example2.c
sem6/: CMakeLists.txt  example1.c  example2.c
sem7/: CMakeLists.txt  example1.c  example2.c
sem8/: compile.sh  example1.S  example2.S  simpleio.S  test2.S
sem9/: example1.S  example2.S  main1.c  main2.c
