project(seminars C)

cmake_minimum_required(VERSION 3.13.4)

#add_compile_options(-Wall -Werror=all)
#add_compile_options(-fpic)

add_subdirectory(sem1)
add_subdirectory(sem2)
add_subdirectory(sem3)
add_subdirectory(sem4)
add_subdirectory(sem5)
add_subdirectory(sem6)
add_subdirectory(sem7)
add_subdirectory(sem12)
add_subdirectory(sem14)
add_subdirectory(sem15)
add_subdirectory(sem16)
add_subdirectory(sem17)
add_subdirectory(sem18)
add_subdirectory(sem19)
add_subdirectory(sem20)
add_subdirectory(sem21)
add_subdirectory(sem22)
add_subdirectory(sem23)
add_subdirectory(sem24)

add_executable(sem13.main sem13/main.c)
